k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cian-lead-generator
  labels:
    app.kubernetes.io/part-of: cian-lead-generator
